--- a/style.css
+++ b/style.css
@@ -1,32 +1,125 @@
 html,
 body {
     height: 100%;
+    background: #000;
+}
+.navbar{
+  margin-top: 0%;
+  margin-left: 0%;
+  font-size: 40px;
+  box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
+  font-family:  ui-serif; 
+  background-color: #a1abed;
+  display:flex ;
+  
 }
 
 .text_box {
     width: 50%;
-    height: 100%;
-    border: 1px solid lightgray;
+    height: 70;
+    border: 3px solid #4fa4cf;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
+    justify-content: space-evenly;
+}
+.form-control{
+  background-color: #555f3854;
+  padding: 2%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #container{
     width: 100%;
-    height: 70%;
-    background-color: white;
+    height: 65%;
+    background-color: rgb(255, 255, 255);
     display: flex;
     margin: 0 auto;
 }
 
 #undo{
+    align-items: left;
     margin:auto;
     display:block;
 }
-
 
 #clear{
     margin:auto;
     display:block;
 }
+
+.btn {
+    padding: 0.6em 2em;
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    background: rgb(0, 0, 0);
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+  }
+  
+  .btn:before {
+    content: "";
+    background: linear-gradient(
+      45deg,
+      #ff0000,
+      #ff7300,
+      #fffb00,
+      #48ff00,
+      #00ffd5,
+      #002bff,
+      #7a00ff,
+      #ff00c8,
+      #ff0000
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 500%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowingbn5 50s infinite;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+  }
+  
+  @keyframes glowingbn5 {
+    0% {
+      background-position: 0 0;
+    }
+    50% {
+      background-position: 400% 0;
+    }
+    100% {
+      background-position: 0 0;
+    }
+  }
+  
+  .btn:active {
+    color: rgba(61, 61, 61, 0.744);
+  }
+  
+  .btn:active:after {
+    background: transparent;
+  }
+  
+  .btn:hover:before {
+    opacity: 1;
+  }
+  
+  .btn:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #191919;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+  }
